handle case for png with undefined resolution

BUG:520498